[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "irontelemetry"
version = "0.1.0"
description = "Error monitoring and crash reporting SDK for Python applications"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "IronServices", email = "support@ironservices.com" }
]
keywords = [
    "error-monitoring",
    "crash-reporting",
    "telemetry",
    "exception-tracking",
    "irontelemetry",
    "ironservices"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://www.irontelemetry.com"
Documentation = "https://www.irontelemetry.com/docs"
Repository = "https://github.com/IronServices/irontelemetry-python"
Issues = "https://github.com/IronServices/irontelemetry-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/irontelemetry"]

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
